# emotion_detection_MLOps_pipeline

./: 404.html  README.md  index.html  requirements.txt  search.html
.dvc/: config
docs/: mkdocs.yml
docs/docs/: dvc.md  index.md  parameters.md  pipeline.md  project_overview.md  project_structure.md  reproduction.md  why_mlops.md
dvc/: index.html
dvc_emotion_detection_pipeline/: LICENSE  Makefile  dvc.yaml  pyproject.toml  requirements.txt
dvc_emotion_detection_pipeline/docs/docs/: index.md
dvc_emotion_detection_pipeline/emotion_detection_pipeline_using_dvc/: __init__.py  dataset.py  features.py  plots.py
dvc_emotion_detection_pipeline/emotion_detection_pipeline_using_dvc/modeling/: data_ingestion.py  predict.py  train.py
dvc_emotion_detection_pipeline/models/: model.pkl
dvc_emotion_detection_pipeline/reports/: metrics.json
getting-started/: index.html
parameters/: index.html
pipeline/: index.html
project_overview/: index.html
project_structure/: index.html
reproduction/: index.html
search/: search_index.json
why_mlops/: index.html
