[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "emotion_detection_pipeline_using_dvc"
version = "0.0.1"
description = "Emotion detection app\u00a0that analyzes text to determine whether it conveys happiness or sadness. Primary goal is to integrate the\u00a0**MLOps process**\u00a0throughout the project lifecycle."
authors = [
  { name = "Yachika Anand" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["emotion_detection_pipeline_using_dvc"]
force_sort_within_sections = true


